tests/machine/x/c/update_stmt.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c:12:9: error: duplicate member ‘name’
   12 |   char *name;
      |         ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:13:7: error: duplicate member ‘age’
   13 |   int age;
      |       ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:14:9: error: duplicate member ‘status’
   14 |   char *status;
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘test_update_adult_status’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:40:7: error: incompatible types when initializing type ‘char *’ using type ‘Person’ {aka ‘struct Person’}
   40 |       (Person){.name = "Alice", .age = 17, .status = "minor"},
      |       ^
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:68:7: error: incompatible types when initializing type ‘char *’ using type ‘Person’ {aka ‘struct Person’}
   68 |       (Person){.name = "Alice", .age = 17, .status = "minor"},
      |       ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:55Z
