tests/machine/x/c/update_stmt.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:55Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct Person Person;

typedef struct {
  char *name;
  int age;
  char *status;
  char *name;
  int age;
  char *status;
} person_t;

typedef struct Person {
  char *name;
  int age;
  char *status;
} Person;
typedef struct {
  int len;
  person_t *data;
} person_list_t;
person_list_t create_person_list(int len) {
  person_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(person_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static person_list_t test_update_adult_status_people;
static void test_update_adult_status() {
  person_t tmp1_data[] = {
      (Person){.name = "Alice", .age = 17, .status = "minor"},
      (Person){.name = "Bob", .age = 26, .status = "adult"},
      (Person){.name = "Charlie", .age = 19, .status = "adult"},
      (Person){.name = "Diana", .age = 16, .status = "minor"}};
  person_list_t tmp1 = {4, tmp1_data};
  int tmp2 = 1;
  if (test_update_adult_status_people.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_update_adult_status_people.len; i3++) {
      if (strcmp(test_update_adult_status_people.data[i3].name,
                 tmp1.data[i3].name) != 0 ||
          test_update_adult_status_people.data[i3].age != tmp1.data[i3].age ||
          strcmp(test_update_adult_status_people.data[i3].status,
                 tmp1.data[i3].status) != 0) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  person_t tmp4_data[] = {
      (Person){.name = "Alice", .age = 17, .status = "minor"},
      (Person){.name = "Bob", .age = 25, .status = "unknown"},
      (Person){.name = "Charlie", .age = 18, .status = "unknown"},
      (Person){.name = "Diana", .age = 16, .status = "minor"}};
  person_list_t tmp4 = {4, tmp4_data};
  person_list_t people = tmp4;
  for (int tmp5 = 0; tmp5 < people.len; tmp5++) {
    person_t tmp6 = people.data[tmp5];
    if (tmp6.age >= 18) {
      tmp6.status = "adult";
      tmp6.age = tmp6.age + 1;
    }
    people.data[tmp5] = tmp6;
  }
  printf("ok\n");
  test_update_adult_status_people = people;
  test_update_adult_status();
  return 0;
}
